code/tui/snapshots/fullscreen/state/xai_subscription_browser_failure.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                [Dashboard]








          ┌── Super Grok › Could not open browser ───────────────────────────────[✗]─┐
          │                                                                          │
          │  browser command unavailable                                             │
          │                                                                          │
          └──────────────────────────────────────────────────────────────────────────┘





  ────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────── Automatic model

  Enter/Esc to close
