code/tui/snapshots/fullscreen/state/zai_subscription_configured.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                [Dashboard]

            ┌── Config › Z.AI ─────────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Account  ·  person@example.test                                     │
            │                                                                      │
            │  Models ──────────────────────────────────────────────────────────── │
            │  No models available                                                 │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────│  Esc to return  ·  l to sign out                                     │──────────
  > Build an└──────────────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────────────────────── Automatic model
